# locke

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: RELEASING.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: build-signed-mac.sh  stage-mcp-sidecar.sh
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: actions.rs  cli.rs  commands.rs  config.rs  git.rs  lib.rs  loops.rs  main.rs  mcp.rs  run.rs  store.rs  watch.rs
apps/desktop/src/api/: git.ts  pulls.ts  reviewStore.ts
apps/desktop/src/components/: ActionBar.tsx  AgentMark.tsx  ApprovalsTray.tsx  CommentBody.tsx  CommentThread.tsx  DeletePullModal.tsx  DiffViewer.tsx  ErrorBoundary.tsx  NewReviewModal.tsx  OpenRepoEmpty.tsx  RunApprovalModal.tsx  RunTab.tsx  SettingsModal.tsx  SettingsPopover.tsx  SidePanel.tsx  StatusBar.tsx  Titlebar.tsx  VerdictBanner.tsx  icons.tsx  primitives.tsx
apps/desktop/src/lib/: agentPrompt.ts  diff.ts  fleet.ts  highlight.ts  lockeLang.ts  loops.ts  meta.ts  mockFleet.ts  nav.ts  repo.ts  report.ts
apps/desktop/src/state/: store.ts
apps/desktop/src/theme/: themes.ts  tokens.ts
apps/desktop/src/views/: ActivityView.tsx  AgentsView.tsx  ExtensionsView.tsx  FilesView.tsx  IntegrationsView.tsx  ListView.tsx  OverviewView.tsx  ReviewView.tsx  ReviewsView.tsx  RunsView.tsx  SettingsView.tsx  WorkspaceView.tsx
apps/desktop/src/views/loops/: LoopBuilder.tsx  LoopMonitor.tsx  LoopPlan.tsx  LoopReview.tsx  LoopsList.tsx  LoopsView.tsx
apps/website/: index.md  package.json
apps/website/.vitepress/: config.mts
apps/website/contributing/: architecture.md  building.md
apps/website/guide/: building-and-review.md  installation.md  loops-quickstart.md  mission-control.md  plan-mode.md  resolve-runs.md  what-is-locke.md  work-graph.md
apps/website/reference/: changelog.md  config.md  loop-lifecycle.md  manifest.md  mcp-tools.md  on-disk-layout.md
crates/locke-mcp/: Cargo.toml
crates/locke-mcp/src/: main.rs
crates/locke-store/: Cargo.toml
crates/locke-store/src/: lib.rs
docs/: agent-review-loop-plan.md  loops-plan-interview.md  loops-plan-strategist.md  loops-progress-feedback.md  loops-requirements-first.md  multi-backend-investigation.md
