[package]
name = "locke"
version = "2.2.0"
description = "Locke — Local PR Review"
authors = ["Locke"]
edition = "2021"
rust-version = "1.77.2"

[lib]
# The desktop app's Rust core is a library so it can be shared with mobile
# targets and tests; main.rs is a thin binary wrapper.
name = "locke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
notify = "6"
locke-store = { path = "../../../crates/locke-store" }

# Release profile is defined once at the workspace root (a member's `[profile]` is
# ignored when a workspace exists).
